testcases/error/unknown_tb_port.veryl
#[test(unknown_tb_port)]
module unknown_tb_port {
    inst clk: $tb::clock_gen(foo: 0);

    initial {
        clk.next(1);
        $finish();
    }
}
